# JobCompass

./: INTEGRATION_COMPLETE.md  JOBS_SETUP.md  LEARNING_RESOURCES_IMPLEMENTATION.md  README.md  RECOMMENDATIONS.md  requirements.txt  test_resource_api.py
backend/: API_DOCUMENTATION.md  Dockerfile  README.md  create_sample_data.py  docker-compose.yml  frontend_integration_examples.js  pyproject.toml  react_integration_examples.jsx  requirements.txt
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_userlearningresource_userresourceprogress.py
backend/ai_services/: admin.py  gemini_service.py  models.py  serializers.py  urls.py  views.py
backend/ai_services/migrations/: 0001_initial.py  0002_auto_20250906_0952.py
backend/community/: models.py  serializers.py  urls.py  views.py
backend/community/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/data/: csv_structure_output.txt
backend/jobs/: urls.py  views.py
backend/taxonomy/: admin.py  models.py  serializers.py  urls.py  views.py
backend/taxonomy/management/commands/: import_csv.py
backend/taxonomy/migrations/: 0001_initial.py  0002_alter_skillgroup_code.py
frontend/: .env.example  .gitignore  GraphNavigator-Implementation-Summary.md  GraphNavigator-README.md  LOD-Implementation-Guide.md  Performance-Optimization-Summary.md  Virtual-Graph-LOD-Implementation.md  accessibility-config.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json
(+95 files in other folders)
